--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emailjs/browser": "^4.4.1",
     "emailjs-com": "^3.2.0",
     "gl-matrix": "^3.4.3",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.511.0",
+    "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
