--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "emailjs-com": "^3.2.0",
     "gl-matrix": "^3.4.3",
     "gsap": "^3.13.0",
+    "i18next": "^25.6.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-i18next": "^16.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
